--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -131,10 +131,11 @@
                         >
                         <input
                           class="form-control"
-                          type="text"
+                          type="number"
                           id="sender_accno"
                           placeholder="Card Number"
                           name="sender_accno"
+                          required
                         />
                       </div>
                     </div>
@@ -145,22 +146,25 @@
                           <input
                             id="sender_expirydate"
                             class="form-control"
-                            type="text"
+                            type="number"
                             placeholder="DD"
                             name="sender_expirydate"
+                            required
                           />
                           <input
                             id="sender_expirymonth"
                             class="form-control"
-                            type="text"
+                            type="number"
                             placeholder="MM"
                             name="sender_expirymonth"
+                            required
                           /><input
                             id="sender_expiryyear"
                             class="form-control"
-                            type="text"
+                            type="number"
                             placeholder="YY"
                             name="sender_expiryyear"
+                            required
                           />
                         </div>
                       </div>
@@ -170,10 +174,11 @@
                         <label class="form-label" for="amount">Amount</label
                         ><input
                           class="form-control"
-                          type="text"
+                          type="number"
                           id="sender_amount"
                           placeholder="Amount"
                           name="sender_amount"
+                          required
                         />
                       </div>
                     </div>
@@ -182,10 +187,11 @@
                         <label class="form-label" for="cvv">CVV</label
                         ><input
                           class="form-control"
-                          type="text"
+                          type="number"
                           id="sender_cvv"
                           placeholder="CVV"
                           name="sender_cvv"
+                          required
                         />
                       </div>
                     </div>
@@ -199,10 +205,11 @@
                           >Account Number</label
                         ><input
                           class="form-control"
-                          type="text"
+                          type="number"
                           id="receiver_accno"
                           placeholder="Card Number"
                           name="receiver_accno"
+                          required
                         />
                       </div>
                     </div>
