more error handling

--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -132,6 +132,7 @@
                         <input
                           class="form-control"
                           type="number"
+                          min="0"
                           id="sender_accno"
                           placeholder="Card Number"
                           name="sender_accno"
@@ -147,6 +148,7 @@
                             id="sender_expirydate"
                             class="form-control"
                             type="number"
+                            min="0"
                             placeholder="DD"
                             name="sender_expirydate"
                             required
@@ -155,6 +157,7 @@
                             id="sender_expirymonth"
                             class="form-control"
                             type="number"
+                            min="0"
                             placeholder="MM"
                             name="sender_expirymonth"
                             required
@@ -162,6 +165,7 @@
                             id="sender_expiryyear"
                             class="form-control"
                             type="number"
+                            min="0"
                             placeholder="YY"
                             name="sender_expiryyear"
                             required
@@ -175,6 +179,7 @@
                         ><input
                           class="form-control"
                           type="number"
+                          min="0"
                           id="sender_amount"
                           placeholder="Amount"
                           name="sender_amount"
@@ -188,6 +193,7 @@
                         ><input
                           class="form-control"
                           type="number"
+                          min="0"
                           id="sender_cvv"
                           placeholder="CVV"
                           name="sender_cvv"
@@ -206,6 +212,7 @@
                         ><input
                           class="form-control"
                           type="number"
+                          min="0"
                           id="receiver_accno"
                           placeholder="Card Number"
                           name="receiver_accno"
