error handling again

--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -133,6 +133,7 @@
                           class="form-control"
                           type="number"
                           min="0"
+                          pattern="\d+"
                           id="sender_accno"
                           placeholder="Card Number"
                           name="sender_accno"
@@ -149,6 +150,7 @@
                             class="form-control"
                             type="number"
                             min="0"
+                            pattern="\d+"
                             placeholder="DD"
                             name="sender_expirydate"
                             required
@@ -158,6 +160,7 @@
                             class="form-control"
                             type="number"
                             min="0"
+                            pattern="\d+"
                             placeholder="MM"
                             name="sender_expirymonth"
                             required
@@ -166,6 +169,7 @@
                             class="form-control"
                             type="number"
                             min="0"
+                            pattern="\d+"
                             placeholder="YY"
                             name="sender_expiryyear"
                             required
@@ -180,6 +184,7 @@
                           class="form-control"
                           type="number"
                           min="0"
+                          pattern="\d+"
                           id="sender_amount"
                           placeholder="Amount"
                           name="sender_amount"
@@ -194,6 +199,7 @@
                           class="form-control"
                           type="number"
                           min="0"
+                          pattern="\d+"
                           id="sender_cvv"
                           placeholder="CVV"
                           name="sender_cvv"
@@ -213,6 +219,7 @@
                           class="form-control"
                           type="number"
                           min="0"
+                          pattern="\d+"
                           id="receiver_accno"
                           placeholder="Card Number"
                           name="receiver_accno"
