--- a/paygate/templates/api-documentation.html
+++ b/paygate/templates/api-documentation.html
@@ -48,7 +48,7 @@
       style="background-color: #e0dfe0 !important"
     >
       <div class="container">
-        <a class="navbar-brand logo" href="#">SafePay</a
+        <a class="navbar-brand logo" href="#">SafePe</a
         ><button
           data-bs-toggle="collapse"
           class="navbar-toggler"
