--- a/paygate/templates/api-documentation.html
+++ b/paygate/templates/api-documentation.html
@@ -93,7 +93,7 @@
             <div class="faq-item">
               <div class="question">
                 <p>
-                  SafePay's API is completely RESTful and all our responses are
+                  SafePe's API is completely RESTful and all our responses are
                   returned in JSON.
                 </p>
               </div>
@@ -101,7 +101,7 @@
             <div class="faq-item">
               <div class="question">
                 <p>
-                  The SafePay API is deployed, so all you need to do is perform
+                  The SafePe API is deployed, so all you need to do is perform
                   a HTTP request to the API endpoint.
                 </p>
               </div>
