--- a/paygate/templates/home.html
+++ b/paygate/templates/home.html
@@ -146,7 +146,7 @@
         </div>
       <div class="footer-copyright" style="background-color: #322058;
       border-color: #322058;">
-        <p>© 2022 SafePay Copyright</p>
+        <p>© 2022 SafePe Copyright</p>
       </div>
     </footer>
     <!-- End: Footer Dark -->
