--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -310,7 +310,7 @@
         class="footer-copyright"
         style="background-color: #322058; border-color: #322058"
       >
-        <p>© 2022 SafePay Copyright</p>
+        <p>© 2022 SafePe Copyright</p>
       </div>
     </footer>
     <!-- End: Footer Dark -->
