--- a/paygate/templates/api-documentation.html
+++ b/paygate/templates/api-documentation.html
@@ -40,6 +40,7 @@
       href="{% static 'paygate/css/bootstrap.min.css' %}"
     />
     <link rel="stylesheet" href="{% static 'paygate/css/animate.css' %}" />
+    <title>SafePe-Doc</title>
   </head>
 
   <body>
