--- a/paygate/templates/features.html
+++ b/paygate/templates/features.html
@@ -35,6 +35,7 @@
       rel="stylesheet"
       href="{% static 'paygate/css/bootstrap.min.css' %}"
     />
+    <title>SafePe-Features</title>
   </head>
 
   <body>
