--- a/paygate/templates/home.html
+++ b/paygate/templates/home.html
@@ -40,6 +40,7 @@
       rel="stylesheet"
       href="{% static 'paygate/css/animate.css' %}"
     />
+    <title>SafePe-Home</title>
   </head>
   <body id="mybody">
     {% comment %} HEADER {% endcomment %}
