--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -44,6 +44,7 @@
       rel="stylesheet"
       href="{% static 'paygate/css/bootstrap.min.css' %}"
     />
+    <title>SafePe-Simulation</title>
   </head>
 
   <body>
