--- a/paygate/templates/api-documentation.html
+++ b/paygate/templates/api-documentation.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Features - SafePay</title>
+    <title>Documentation - SafePay</title>
     <meta
       name="description"
       content="Do your Transactions more securely than ever"
@@ -40,7 +40,7 @@
       href="{% static 'paygate/css/bootstrap.min.css' %}"
     />
     <link rel="stylesheet" href="{% static 'paygate/css/animate.css' %}" />
-    <title>SafePe-Documentation</title>
+    
   </head>
 
   <body>
